--- a/LIT.Smabu/Client/Pages/Customer/Overview.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Overview.razor
@@ -9,12 +9,11 @@
 
 <MudContainer Class="mt-8">
     <MudStack Row Justify="Justify.SpaceBetween">
-        <MudText Typo="Typo.h4" Align="Align.Start">Kunden</MudText>
+        <MudText Typo="Typo.h6">Kunden</MudText>
         <MudButtonGroup>
             <MudButton Href="/customers/create" StartIcon="@Icons.Material.Filled.Add">Neu</MudButton>
         </MudButtonGroup>
     </MudStack>
-
 
     <MudDataGrid Items="@customers">
         <Columns>
