--- a/LIT.Smabu/Client/Pages/Customer/Edit.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Edit.razor
@@ -6,39 +6,37 @@
 @inject HttpClient Http
 @attribute [Authorize]
 
-<PageHeader PageTitle="@("Kunde " + @Model?.Name)">
+<MudContainer Class="mt-8">
+    <MudStack Row Justify="Justify.SpaceBetween">
+         <MudText Typo="Typo.h6">@("Kunde " + @Model?.Name)</MudText>
+            <MudButtonGroup>
 
-</PageHeader>
+            </MudButtonGroup>
+        </MudStack>
 
-@if (Model != null)
-{
-    <EditForm Model="@Model" OnValidSubmit="@SubmitAsync">
-        <div class="row">
-            <div class="col-md-6">
-                <label for="Name" class="form-label">Name</label>
-                <InputText class="form-control" @bind-Value="Model.Name" />
-                <ValidationMessage For="@(() => Model.Name)" />
-            </div>
-            <div class="col-md-6">
-                <label for="IndustryBranch" class="form-label">Branche</label>
-                <InputText class="form-control" @bind-Value="Model.IndustryBranch" />
-                <ValidationMessage For="@(() => Model.IndustryBranch)" />
-            </div>
-        </div>
-        <div class="row">
-        </div>
-
-
-        <FormFooter BackUrl="/customers">
-            <Actions>
-                <button type="submit" class="btn btn-success">Speichern</button>
-            </Actions>
-        </FormFooter>
-    </EditForm>
-}
+        <MudForm @ref="form" @bind-IsValid="@success" @bind-Errors="@errors">
+            <MudGrid>
+                <MudItem xs="12" sm="6">
+                    <MudTextField Label="Name" Required @bind-Value="Model.Name" />
+             </MudItem>
+             <MudItem xs="12" sm="6">
+                 <MudTextField Label="Branche" @bind-Value="Model.IndustryBranch" />
+             </MudItem>
+             <MudItem xs="12">
+                 <MudButtonGroup>
+                     <MudIconButton Icon="@Icons.Material.Filled.Cancel" Color="Color.Default" Href="/customers" />
+                     <MudIconButton Icon="@Icons.Material.Filled.Save" Color="Color.Success" Disabled="@(!success)" OnClick="@SubmitAsync" />
+                 </MudButtonGroup>
+             </MudItem>
+         </MudGrid>
+     </MudForm>
+ </MudContainer>
 
 @code {
     @inject NavigationManager NavigationManager;
+    bool success;
+    string[] errors = { };
+    MudForm form;
 
     [Parameter]
     public Guid Id { get; set; }
