--- a/LIT.Smabu/Client/Shared/MainLayout.razor
+++ b/LIT.Smabu/Client/Shared/MainLayout.razor
@@ -14,7 +14,7 @@
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="2">
         <MudDrawerHeader Dense="true">
-            <MudText Typo="Typo.h6" Class="mt-1">Smabu</MudText>
+            <MudText Typo="Typo.h6" Class="mt-1 ml-n1">smabu</MudText>
         </MudDrawerHeader>
         <NavMenu />
     </MudDrawer>
