--- a/LIT.Smabu/Client/Pages/Index.razor
+++ b/LIT.Smabu/Client/Pages/Index.razor
@@ -1,117 +1,144 @@
 ﻿@inject HttpClient Http
 @page "/"
+@using LIT.Smabu.Shared.Dashboards;
 
 <PageTitle>Smabu</PageTitle>
 
-<MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
-    <MudGrid>
-        <MudItem xs="12" sm="6" md="4">
-            <MudCard>
-                <MudCardContent>
-                    <MudText>Aktuelle Umsätze</MudText>
-                    <MudText Typo="Typo.body2"> 3 Monate: ??? €</MudText>
-                    <MudText Typo="Typo.body2"> 6 Montage: ??? €</MudText>
-                    <MudText Typo="Typo.body2">12 Montate: ??? €</MudText>
-                </MudCardContent>
-            </MudCard>
-        </MudItem>
-        <MudItem xs="12" sm="6" md="4">
-            <MudCard>
-                <MudCardContent>
-                    <MudText>Umsatzstärkste Kunden</MudText>
-                    <MudText Typo="Typo.body2">XYZ: ??? €</MudText>
-                    <MudText Typo="Typo.body2">XYZ: ??? €</MudText>
-                    <MudText Typo="Typo.body2">XYZ: ??? €</MudText>
-                </MudCardContent>
-            </MudCard>
-        </MudItem>
-        <MudItem xs="12" sm="12" md="4">
-            <MudCard>
-                <MudCardContent>
-                    <MudText>Gesamtumsatz</MudText>
-                    <MudText Typo="Typo.body2">Total: ??? €</MudText>
-                    <MudText Typo="Typo.body2">2023: ??? €</MudText>
-                    <MudText Typo="Typo.body2">2022: ??? €</MudText>
-                </MudCardContent>
-            </MudCard>
-        </MudItem>
-        <MudItem xs="12" sm="6">
-            <MudGrid>
-                <MudItem xs="12">
-                    <MudCard Elevation="1">
-                        <MudCardContent>
-                            <MudText>Story of the day</MudText>
-                            <MudText Typo="Typo.body2">The quick, brown fox jumps over a lazy dog.</MudText>
-                        </MudCardContent>
-                        <MudCardActions>
-                            <MudButton Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
-                        </MudCardActions>
-                    </MudCard>
-                </MudItem>
-                <MudItem xs="12">
-                    <MudCard Elevation="1">
-                        <MudCardContent>
-                            <MudText>Story of the day</MudText>
-                            <MudText Typo="Typo.body2">The quick, brown fox jumps over a lazy dog.</MudText>
-                        </MudCardContent>
-                        <MudCardActions>
-                            <MudButton Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
-                        </MudCardActions>
-                    </MudCard>
-                </MudItem>
-            </MudGrid>
-        </MudItem>
-        <MudItem xs="12" sm="6" Class="d-flex">
-            <MudCard Elevation="1" Class="flex-1">
-                <MudCardContent>
-                    <MudText>Story of the day</MudText>
-                    <MudText Typo="Typo.body2">The quick, brown fox jumps over a lazy dog.</MudText>
-                </MudCardContent>
-                <MudCardActions>
-                    <MudButton Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
-                </MudCardActions>
-            </MudCard>
-        </MudItem>
-        <MudItem xs="12" sm="6" md="4">
-            <MudCard>
-                <MudCardContent>
-                    <MudText>Offene Rechnungen</MudText>
-                    <MudText Typo="Typo.body2">The quick, brown fox jumps over a lazy dog.</MudText>
-                </MudCardContent>
-                <MudCardActions>
-                    <MudButton Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
-                </MudCardActions>
-            </MudCard>
-        </MudItem>
-        <MudItem xs="12" sm="6" md="4">
-            <MudCard>
-                <MudCardContent>
-                    <MudText>Story of the day</MudText>
-                    <MudText Typo="Typo.body2">The quick, brown fox jumps over a lazy dog.</MudText>
-                </MudCardContent>
-                <MudCardActions>
-                    <MudButton Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
-                </MudCardActions>
-            </MudCard>
-        </MudItem>
-        <MudItem xs="12" sm="12" md="4">
-            <MudCard>
-                <MudCardContent>
-                    <MudText>Story of the day</MudText>
-                    <MudText Typo="Typo.body2">The quick, brown fox jumps over a lazy dog.</MudText>
-                </MudCardContent>
-                <MudCardActions>
-                    <MudButton Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
-                </MudCardActions>
-            </MudCard>
-        </MudItem>
-    </MudGrid>
-</MudContainer>
+<AuthorizeView>
+    <Authorized>
+        @if(this.Model != null)
+        {
+            <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
+                <MudGrid>
+                    <MudItem xs="12" sm="6" md="4">
+                        <MudCard>
+                            <MudCardContent>
+                                <MudText Typo="Typo.h6">Aktuelle Umsätze</MudText>
+                                <MudText Typo="Typo.body2"> 3 Monate: @Model.Sales3Month</MudText>
+                                <MudText Typo="Typo.body2"> 6 Monate: @Model.Sales6Month</MudText>
+                                <MudText Typo="Typo.body2">12 Monate: @Model.Sales12Month</MudText>
+                            </MudCardContent>
+                        </MudCard>
+                    </MudItem>
+                    <MudItem xs="12" sm="6" md="4">
+                        <MudCard>
+                            <MudCardContent>
+                                <MudText Typo="Typo.h6">Umsatzstärkste Kunden</MudText>
+                                <MudText Typo="Typo.body2">@Model.BestSalesCustomer1Name @Model.BestSalesCustomer1Value</MudText>
+                                <MudText Typo="Typo.body2">@Model.BestSalesCustomer2Name @Model.BestSalesCustomer2Value</MudText>
+                                <MudText Typo="Typo.body2">@Model.BestSalesCustomer3Name @Model.BestSalesCustomer3Value</MudText>
+                            </MudCardContent>
+                        </MudCard>
+                    </MudItem>
+                    <MudItem xs="12" sm="12" md="4">
+                        <MudCard>
+                            <MudCardContent>
+                                <MudText Typo="Typo.h6">Gesamtumsatz</MudText>
+                                <MudText Typo="Typo.body2">Total: @Model.TotalSales</MudText>
+                                <MudText Typo="Typo.body2">2023: @Model.SalesCurrentYear</MudText>
+                                <MudText Typo="Typo.body2">2022: @Model.SalesLastYear</MudText>
+                            </MudCardContent>
+                        </MudCard>
+                    </MudItem>
+                    <MudItem xs="12" sm="6">
+                        <MudGrid>
+                            <MudItem xs="12">
+                                <MudCard Elevation="1">
+                                    <MudCardContent>
+                                        <MudText>Story of the day</MudText>
+                                        <MudText Typo="Typo.body2">The quick, brown fox jumps over a lazy dog.</MudText>
+                                    </MudCardContent>
+                                    <MudCardActions>
+                                        <MudButton Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
+                                    </MudCardActions>
+                                </MudCard>
+                            </MudItem>
+                            <MudItem xs="12">
+                                <MudCard Elevation="1">
+                                    <MudCardContent>
+                                        <MudText>Story of the day</MudText>
+                                        <MudText Typo="Typo.body2">The quick, brown fox jumps over a lazy dog.</MudText>
+                                    </MudCardContent>
+                                    <MudCardActions>
+                                        <MudButton Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
+                                    </MudCardActions>
+                                </MudCard>
+                            </MudItem>
+                        </MudGrid>
+                    </MudItem>
+                    <MudItem xs="12" sm="6" Class="d-flex">
+                        <MudCard Elevation="1" Class="flex-1">
+                            <MudCardContent>
+                                <MudText>Story of the day</MudText>
+                                <MudText Typo="Typo.body2">The quick, brown fox jumps over a lazy dog.</MudText>
+                            </MudCardContent>
+                            <MudCardActions>
+                                <MudButton Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
+                            </MudCardActions>
+                        </MudCard>
+                    </MudItem>
+                    <MudItem xs="12" sm="6" md="4">
+                        <MudCard>
+                            <MudCardContent>
+                                <MudText>Offene Rechnungen</MudText>
+                                <MudText Typo="Typo.body2">The quick, brown fox jumps over a lazy dog.</MudText>
+                            </MudCardContent>
+                            <MudCardActions>
+                                <MudButton Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
+                            </MudCardActions>
+                        </MudCard>
+                    </MudItem>
+                    <MudItem xs="12" sm="6" md="4">
+                        <MudCard>
+                            <MudCardContent>
+                                <MudText>Story of the day</MudText>
+                                <MudText Typo="Typo.body2">The quick, brown fox jumps over a lazy dog.</MudText>
+                            </MudCardContent>
+                            <MudCardActions>
+                                <MudButton Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
+                            </MudCardActions>
+                        </MudCard>
+                    </MudItem>
+                    <MudItem xs="12" sm="12" md="4">
+                        <MudCard>
+                            <MudCardContent>
+                                <MudText>Story of the day</MudText>
+                                <MudText Typo="Typo.body2">The quick, brown fox jumps over a lazy dog.</MudText>
+                            </MudCardContent>
+                            <MudCardActions>
+                                <MudButton Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
+                            </MudCardActions>
+                        </MudCard>
+                    </MudItem>
+                </MudGrid>
+            </MudContainer>
+        }
+    </Authorized>
+    <NotAuthorized>
+        <MudStack Class="mt-4">
+            <MudText Typo="Typo.h4">Willkommen!</MudText>
+            <MudText Typo="Typo.body1">Bitte einloggen</MudText>
+        </MudStack>
+    </NotAuthorized>
+</AuthorizeView>
+
 
 
 @code {
-
+    public HomeDashboardDTO Model { get; set; }
+    [CascadingParameter]
+    private Task<AuthenticationState> authenticationStateTask { get; set; }
     protected override async Task OnInitializedAsync()
+    {
+        var authenticationState = await authenticationStateTask;
+        if (authenticationState?.User?.Identity?.IsAuthenticated ?? false)
+        {
+            this.Model = await Http.GetFromJsonAsync<HomeDashboardDTO>("home/dashboard") ?? throw new Exception("NotFound");
+            await TempImportAsync();
+        }
+    }
+
+    private async Task TempImportAsync()
     {
         try
         {
@@ -119,7 +146,7 @@
         }
         catch (Exception)
         {
-            
+
         }
     }
 }
